# multicloud-data-catalogue

./: .gitignore  CHANGELOG.MD  Makefile  pyproject.toml
mcd_data_catalogue/: main.py
mcd_data_catalogue/providers/: aws.py
mcd_data_catalogue/providers/aws_storage/: dynamo.py  rds.py
multicloud_data_catalogue/: main.py
multicloud_data_catalogue/providers/: aws.py
multicloud_data_catalogue/providers/aws_storage/: dynamo.py
