[tool.poetry]
name = "mcd-data-catalogue"
version = "0.1.0"
description = ""
authors = ["Roman Tsypuk <tsypuk.conf@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mcd_data_catalogue" }]

[tool.poetry.scripts]
mcdc = "mcd_data_catalogue.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.9.0"
multicloud-diagrams = "^0.3.13"
#multicloud-diagrams = { path = "../multicloud-diagrams/multicloud-diagrams", develop = true }
boto3 = "^1.28.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
