[tool.poetry]
name = "multicloud-data-catalogue"
version = "0.1.0"
description = "CLI utility to interacts with AWS Databases, get details and draw Architecture"
authors = ["Roman Tsypuk <tsypuk.conf@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "multicloud_data_catalogue" }]

[tool.poetry.scripts]
mcdc = "multicloud_data_catalogue.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
multicloud-diagrams = "^0.3.13"
#multicloud-diagrams = { path = "../multicloud-diagrams/multicloud-diagrams", develop = true }
boto3 = "^1.28.29"
rich = "^13.5.2"
flakehell = "^0.9.0"
flake8 = "3.9.0"
git-changelog = "^2.5.2"

[tool.flakehell]
exclude = ["README.md", "./venv/", "./docs"]
format = "colored"
max_line_length = 88
show_source = true

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-E501"]
pyflakes = ["+*"]
pylint = ["+*"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
